--- a/codebuffalo/codebuffalo/Pages/Profile.razor
+++ b/codebuffalo/codebuffalo/Pages/Profile.razor
@@ -1,26 +1,44 @@
 ﻿@page "/profile"
 @using codebuffalo.Data;
-@inject Account User
+@using codebuffalo.Helpers;
+@inject DatabaseHelper Database
 
 <h1>User Profile</h1>
 
-<p>Current count: @currentCount</p>
-<p>Squirtle? @cool</p>
+<p>@firstname  @lastname</p>
+<p>@email</p>
+<p>@city , @state , @country</p>
+<p>@radius</p>
+<p>@phonenumber</p>
+<p>@dob</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Edit Profile</button>
 
 @code {
 
-    private int currentCount = 0;
-    String cool = "";
+    String firstname = "";
+    String lastname = "";
+    String email = "";
+    String city = "";
+    String state = "";
+    String country = "";
+    String radius = "";
+    String phonenumber = "";
+    String dob = "";
+
+    Account test;
 
     protected override async Task OnInitializedAsync()
     {
-        cool = await User.SetDefaults();
-    }
+        test = await Database.GetAccount();
 
-    private void IncrementCount()
-    {
-        currentCount++;
+        firstname = test.FirstName;
+        lastname = test.LastName;
+        email = test.Email;
+        city = test.City;
+        state = test.State;
+        country = test.Country;
+        radius = test.Radius;
+        phonenumber = test.PhoneNumber;
+        dob = test.DOB;
     }
 }
